--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ readme = 'README.md'
 license = 'MIT'
 requires-python = ">= 3.11"
 dynamic = ['version']
+dependencies = ['pydantic']
 classifiers = [
   'Development Status :: 3 - Alpha',
   'License :: OSI Approved :: MIT License',
